Login token generation

--- a/CRM.API/appsettings.json
+++ b/CRM.API/appsettings.json
@@ -8,5 +8,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  /*Clave para encriptar los token*/
+  "jwtKey": "sagdsadgfeSDF674545REFG$%FEfgdslkjfglkjhfgdkljhdR5454545_4TGRGtyo!!kjytkljty"
 }
