--- a/CRM.Frontend/CRM.Frontend.csproj
+++ b/CRM.Frontend/CRM.Frontend.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\Auth\" />
+    <ProjectReference Include="..\CRM.Shared\CRM.Shared.csproj" />
   </ItemGroup>
 
 </Project>
